<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_qrcode_encoder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/name"
        android:paddingTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:text="@string/label_name"/>

    <TextView
        android:id="@+id/phone"
        android:paddingTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:text="@string/label_phone"/>

    <TextView
        android:id="@+id/key"
        android:paddingTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/label_key"/>


</LinearLayout>