<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/methods"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.AddContactActivity" >

    <TextView
        android:id="@+id/textviewmethods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="20dp"
        android:text="@string/title_activity_add_contact_method"
        android:textColor="@color/black"
        android:textSize="30dp" />

        <Button
            android:id="@+id/scannerQR"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/qrcode"
            android:textSize="18dp" >
        </Button>

        <Button
            android:id="@+id/keybase"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/keybase"
            android:textSize="18dp" >
        </Button>
</LinearLayout>
